...
  "@profileVersionLabel": {
    "placeholders": {
      "version": {},
      "buildNumber": {}
    }
  },
  "authSignInTitle": "Sign in",
  "authSignInSubtitle": "Your manga collection awaits",
  "authEmailLabel": "Email",
  "authPasswordLabel": "Password",
  "authSignInButton": "Sign in",
  "authSignInCreateAccountButton": "Sign in / Create account",
  "authNoAccount": "Don't have an account? Create one",
...
